--- a/index.html
+++ b/index.html
@@ -297,34 +297,22 @@
             </div>
 
             <div class="form-group">
-                <label for="prenda">1️⃣0️⃣ ¿Que prenda de vestir te gustaría aprender? 👗👖👕👚<span class="required-asterisk">*</span></label>
-                <select id="prenda" name="prenda" required>
-                    <option value="" disabled selected hidden>Selecciona una opción</option>
-                    <option value="faldas">Faldas</option>
-                    <option value="pantalones">Pantalones</option>
-                    <option value="vestidos">Vestidos</option>
-                    <option value="blusas">Blusas</option>
-                    <option value="otros">Otros</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="no-gusta">1️⃣1️⃣ ¿Qué es lo que no te gusta en el grupo? 😰<span class="required-asterisk">*</span></label>
-                <select id="no-gusta" name="no-gusta" required>
-                    <option value="" disabled selected hidden>Selecciona una opción</option>
-                    <option value="muchos-mensajes">Muchos mensajes</option>
-                    <option value="no-entender">No entender los temas</option>
-                    <option value="otro">Otro</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="maestra-isabel">1️⃣2️⃣ Ya conocías a la Maestra Isabel? 💁🏻‍♀️✂️👚<span class="required-asterisk">*</span></label>
+                <label for="maestra-isabel">1️⃣0️⃣ Ya conocías a la Maestra Isabel? 💁🏻‍♀️✂️👚<span class="required-asterisk">*</span></label>
                 <select id="maestra-isabel" name="maestra-isabel" required>
                     <option value="" disabled selected hidden>Selecciona una opción</option>
                     <option value="si-la-conozco">Sí la conozco 😊</option>
                     <option value="no-la-conocia">No la conocía ☺️</option>
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label for="prenda">1️⃣1️⃣ ¿Que prenda de vestir te gustaría aprender? 👗👖👕👚<span class="required-asterisk">*</span></label>
+                <textarea id="prenda" name="prenda" placeholder="Tu respuesta" required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="no-gusta">1️⃣2️⃣ ¿Qué es lo que no te gusta en el grupo? 😰<span class="required-asterisk">*</span></label>
+                <textarea id="no-gusta" name="no-gusta" placeholder="Tu respuesta" required></textarea>
             </div>
 
             <div class="form-group">
@@ -340,7 +328,7 @@
 <div id="mensaje-exito">
     <img src="images/felicidades-nos-vemos-en-whatsapp.jpg" alt="Felicidades nos vemos en WhatsApp">
     
-    <a href="https://wa.me/TU_NUMERO_DE_TELEFONO_AQUI" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/+51965723248" class="whatsapp-button" target="_blank">
         Ir al chat de WhatsApp
     </a>
 </div>
