--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
 
             <div class="form-group">
-                <label for="mensaje">1️⃣3️⃣ Envíanos un mensaje</label>
+                <label for="mensaje">1️⃣3️⃣ Déjanos un Comentario</label>
                 <textarea id="mensaje" name="mensaje"></textarea>
             </div>
 
