--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
             </div>
 
             <div class="form-group">
-                <label for="mensaje">1️⃣3️⃣ Déjanos un Comentario</label>
-                <textarea id="mensaje" name="mensaje"></textarea>
+                <label for="comentario">1️⃣3️⃣ Déjanos un Comentario</label>
+                <textarea id="comentario" name="comentario"></textarea>
             </div>
 
             <button type="submit" class="submit-button">Enviar Respuesta</button>
