--- a/index.html
+++ b/index.html
@@ -234,10 +234,24 @@
                 <input type="text" id="nombre" name="nombre" placeholder="Tu respuesta" required>
             </div>
 
-            <div class="form-group">
-                <label for="pais">2️⃣ ¿De qué pais nos visitas? 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹<span class="required-asterisk">*</span></label>
-                <input type="text" id="pais" name="pais" placeholder="Tu respuesta" required>
-            </div>
+<label>País</label>
+<select id="pais" required>
+    <option value="">Selecciona tu país</option>
+    <option value="colombia">🇨🇴 Colombia</option>
+    <option value="mexico">🇲🇽 México</option>
+    <option value="peru">🇵🇪 Perú</option>
+    <option value="ecuador">🇪🇨 Ecuador</option>
+    <option value="chile">🇨🇱 Chile</option>
+    <option value="bolivia">🇧🇴 Bolivia</option>
+    <option value="guatemala">🇬🇹 Guatemala</option>
+    <option value="elsalvador">🇸🇻 El Salvador</option>
+    <option value="argentina">🇦🇷 Argentina</option>
+    <option value="venezuela">🇻🇪 Venezuela</option>
+    <option value="honduras">🇭🇳 Honduras</option>
+    <option value="uruguay">🇺🇾 Uruguay</option>
+    <option value="costarica">🇨🇷 Costa Rica</option>
+</select>
+
 
             <div class="form-group">
                 <label for="telefono">3️⃣ Tu Teléfono<span class="required-asterisk">*</span></label>
