--- a/index.html
+++ b/index.html
@@ -234,23 +234,33 @@
                 <input type="text" id="nombre" name="nombre" placeholder="Tu respuesta" required>
             </div>
 
-<label>País</label>
-<select id="pais" required>
-    <option value="">Selecciona tu país</option>
-    <option value="colombia">🇨🇴 Colombia</option>
-    <option value="mexico">🇲🇽 México</option>
-    <option value="peru">🇵🇪 Perú</option>
-    <option value="ecuador">🇪🇨 Ecuador</option>
-    <option value="chile">🇨🇱 Chile</option>
-    <option value="bolivia">🇧🇴 Bolivia</option>
-    <option value="guatemala">🇬🇹 Guatemala</option>
-    <option value="elsalvador">🇸🇻 El Salvador</option>
-    <option value="argentina">🇦🇷 Argentina</option>
-    <option value="venezuela">🇻🇪 Venezuela</option>
-    <option value="honduras">🇭🇳 Honduras</option>
-    <option value="uruguay">🇺🇾 Uruguay</option>
-    <option value="costarica">🇨🇷 Costa Rica</option>
-</select>
+<div class="form-group">
+    <label for="pais">2️⃣ ¿De qué país nos visitas?<span class="required-asterisk">*</span></label>
+
+    <select id="pais" name="pais" required style="
+        font-size: 26px;
+        height: 75px;
+        padding: 15px;
+        border-radius: 10px;
+        width: 100%;
+    ">
+        <option value="">Selecciona tu país</option>
+        <option value="colombia">🇨🇴 Colombia</option>
+        <option value="mexico">🇲🇽 México</option>
+        <option value="peru">🇵🇪 Perú</option>
+        <option value="ecuador">🇪🇨 Ecuador</option>
+        <option value="chile">🇨🇱 Chile</option>
+        <option value="bolivia">🇧🇴 Bolivia</option>
+        <option value="guatemala">🇬🇹 Guatemala</option>
+        <option value="elsalvador">🇸🇻 El Salvador</option>
+        <option value="argentina">🇦🇷 Argentina</option>
+        <option value="venezuela">🇻🇪 Venezuela</option>
+        <option value="honduras">🇭🇳 Honduras</option>
+        <option value="uruguay">🇺🇾 Uruguay</option>
+        <option value="costarica">🇨🇷 Costa Rica</option>
+    </select>
+</div>
+
 
 
             <div class="form-group">
