--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-s0cale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenida a la Comunidad</title>
 <style>
     /* --- ESTILOS GENERALES Y AJUSTABLES --- */
@@ -360,57 +360,51 @@
     </a>
 </div>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const formulario = document.getElementById('miFormulario');
-        const mainContainer = document.getElementById('main-container');
-        const mensajeExito = document.getElementById('mensaje-exito');
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
 
-formulario.addEventListener('submit', function(event) {
-    event.preventDefault();
+    const pais = document.getElementById("pais");
+    const telefono = document.getElementById("telefono");
 
-    // ✅ Capturar campos obligatorios
-    const nombre = document.getElementById('nombre').value.trim();
-    const pais = document.getElementById('pais').value.trim();
-    const telefono = document.getElementById('telefono').value.trim();
+    const reglas = {
+        colombia:  /^(\+57)?3\d{9}$/,
+        mexico:    /^(\+52)?\d{10}$/,
+        peru:      /^(\+51)?9\d{8}$/,
+        ecuador:   /^(\+593)?09\d{8}$/,
+        chile:     /^(\+56)?9\d{8}$/,
+        bolivia:   /^(\+591)?[67]\d{7}$/,
+        guatemala: /^(\+502)?[3-5]\d{7}$/,
+        elsalvador:/^(\+503)?[6-7]\d{7}$/,
+        argentina: /^(\+54)?9\d{10}$/,
+        venezuela: /^(\+58)?4\d{9}$/,
+        honduras:  /^(\+504)?[389]\d{7}$/,
+        uruguay:   /^(\+598)?9\d{7}$/,
+        costarica: /^(\+506)?[6-8]\d{7}$/
+    };
 
-    // ✅ Validación campo por campo
-    if (nombre === "") {
-        alert("Escribe tu nombre");
-        document.getElementById("nombre").focus();
-        return;
-    }
-
-    if (pais === "") {
-        alert("Escribe tu país");
-        document.getElementById("pais").focus();
-        return;
-    }
-
-    if (telefono === "") {
-        alert("Escribe tu teléfono");
-        document.getElementById("telefono").focus();
-        return;
-    }
-
-    // ✅ Si pasó validación, continúa
-    mainContainer.style.display = 'none';
-    mensajeExito.style.display = 'block';
-
-    window.scrollTo({
-        top: 0,
-        behavior: 'smooth'
+    telefono.addEventListener("input", function () {
+        this.value = this.value.replace(/[^0-9+]/g, '');
     });
 
-    const formData = new FormData(formulario);
-    const scriptURL = formulario.getAttribute('action');
+    document.getElementById("miFormulario").addEventListener("submit", function (e) {
+        const paisElegido = pais.value;
+        const numero = telefono.value.replace(/\s+/g, '').trim();
 
-    fetch(scriptURL, { method: 'POST', body: formData })
-        .then(response => console.log('Envío exitoso!', response))
-        .catch(error => console.error('Error!', error));
+        if (!paisElegido) {
+            alert("Selecciona tu país");
+            pais.focus();
+            e.preventDefault();
+            return;
+        }
+
+        if (!reglas[paisElegido].test(numero)) {
+            alert("El número de teléfono no corresponde al país seleccionado");
+            telefono.focus();
+            e.preventDefault();
+        }
+
+    });
 });
-
-    });
 </script>
 
 </body>
